--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/ordering-information/ordering-information.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/ordering-information/ordering-information.component.html
@@ -143,12 +143,22 @@
 
 </ng-template>
 
-
 <ng-template #orderingReceiptInfo>
+    
+
+    <div class="usa-alert usa-alert-info mb-4">
+        <div class="usa-alert-body">
+            <p>
+                In accordance with the Placement of Orders clause of this solicitation, how would you like to receive orders placed by GSA's Federal Supply Service (FSS)
+            </p>
+        </div>
+    </div>
         
     <div class="col p-0">
-        <h4 class="h6 border-bottom mb-3" id="yournegs">Computer-to-Computer Electronic Data Interchange (EDI)</h4>
+        <h4 class="h6 border-bottom mb-3">Computer-to-Computer Electronic Data Interchange (EDI)</h4>
     </div>
+    
+
     <div class="row">
         <div class="col-11">
             <div class="row">
@@ -181,7 +191,7 @@
             </div>
         </div>
         <div class="col-1">
-            <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openOrderingReceiptModal()">
+            <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openOrderingReceiptEdiModal()">
                 <span class="fa fa-pencil"></span>
             </button>
             <button type="button" class="btn btn-default btn-sm text-muted bg-danger-hover">
@@ -222,7 +232,7 @@
             </div>
         </div>
         <div class="col-1">
-            <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openOrderingReceiptModal()">
+            <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openOrderingReceiptEdiModal()">
                 <span class="fa fa-pencil"></span>
             </button>
             <button type="button" class="btn btn-default btn-sm text-muted bg-danger-hover">
@@ -234,7 +244,7 @@
     
     <hr>           
     <div class="col mt-4 d-flex justify-content-center"> 
-        <button type="button" class="btn btn-light gsa-light-blue btn bg-primary-hover" (click)="openOrderingReceiptModal()">
+        <button type="button" class="btn btn-light gsa-light-blue btn bg-primary-hover" (click)="openOrderingReceiptEdiModal()">
             <span class="fa fa-plus mr-2"></span>
             Add EDI Contact
         </button>
@@ -253,7 +263,7 @@
             </div>
         </div>        
         <div class="col-sm-4 col-md-2 col-lg-2 col-xl-1">
-            <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openOrderingReceiptModal()">
+            <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openOrderingReceiptFaxModal()">
                 <span class="fa fa-pencil"></span>
             </button>
             <button type="button" class="btn btn-default btn-sm text-muted bg-danger-hover">
@@ -269,7 +279,7 @@
             </div>
         </div>        
         <div class="col-sm-4 col-md-2 col-lg-2 col-xl-1">
-            <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openOrderingReceiptModal()">
+            <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openOrderingReceiptFaxModal()">
                 <span class="fa fa-pencil"></span>
             </button>
             <button type="button" class="btn btn-default btn-sm text-muted bg-danger-hover">
@@ -281,7 +291,7 @@
     
     <hr>           
     <div class="col mt-4 d-flex justify-content-center"> 
-        <button type="button" class="btn btn-light gsa-light-blue btn bg-primary-hover" (click)="openOrderingReceiptModal()">
+        <button type="button" class="btn btn-light gsa-light-blue btn bg-primary-hover" (click)="openOrderingReceiptFaxModal()">
             <span class="fa fa-plus mr-2"></span>
             Add Fax
         </button>
@@ -292,53 +302,57 @@
 
 <!-- Edit Section -->
 <ng-template #editRemittanceAddress>
-    <form id="negotiators">
+    <form id="remittanceAddress">
 
         <div class="usa-alert usa-alert-warning mb-4">
             <div class="usa-alert-body">
                 <p>
-                    <b>Who will negotiate your eOffer?</b>
-                </p>
-                <p>
-                    Offerors can add multiple negotiators. A minimum of one negotiator must have signature authority, but it is STRONGLY
-                    recommended to have at least two valid Negotiators. Negotiators without signature authority may prepare the eOffer but
-                    only negotiators with signature authority may submit the eOffer and sign the Contract. 
+                    The offeror is requested to include the postal mailing address(es) for the Remittance Address where paper form orders should be mailed.
                 </p>
             </div>
         </div>
-        <div class="container">             
+        <div class="container">         
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
-                    <label for="name">Name:</label>
+                <div class="col-md-3 d-flex justify-content-end">   
+                    <label for="name">Company (Supplier) Name:</label>
                 </div>
-                <div class="col-md-10">
-                    <input type="text" class="form-control col-md-8" id="name" name="name" aria-describedby="nameHelp"/>
-                    <small id="nameHelp" class="form-text text-muted">
-                        Negotiator's name should be exactly the same as in the FAS ID of that user.
-                    </small>
+                <div class="col-md-9">
+                    <input type="text" class="form-control col-md-6" id="name" name="name" aria-describedby="nameHelp"/>
                 </div>
             </div>
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
-                    <label for="title">Title:</label>
+                <div class="col-md-3 d-flex justify-content-end">   
+                    <label for="title">Attention:</label>
                 </div>
-                <div class="col-md-10">
-                    <input type="text" class="form-control col-md-8" id="title" name="title"/>
+                <div class="col-md-9">
+                    <input type="text" class="form-control col-md-6" id="attention" name="attention"/>
                 </div>
             </div>              
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
-                    <label for="role">Role:</label>
+                <div class="col-md-3 d-flex justify-content-end">   
+                    <label for="role">Address:</label>
                 </div>
-                <div class="col-md-10">
-                    <input type="text" class="form-control col-md-8" id="role" name="role"/>
+                <div class="col-md-9 form-inline">
+                    <input type="text" class="form-control col-md-8 mb-2" id="address1" name="role" placeholder="Street Address 1"/>
+                    <input type="text" class="form-control col-md-8 mb-2" id="address2" name="role" placeholder="Street Address 2"/>
+                    <input type="text" class="form-control col-md-5 mb-2 mr-3" id="city" name="role" placeholder="City"/>
+                    <select class="custom-select col-md-5 mb-2" id="state" name="state" aria-label="State or Province">
+                        <option selected>State or Province</option>
+                        <option value="0">Maryland</option>
+                        <option value="1">Virginia</option>
+                    </select>
+                    <input type="text" class="form-control col-md-3 mb-2 mr-3" id="zip" name="role" placeholder="Zip or Postal Code"/>
+                    <select class="custom-select col-md-5 mb-2 mr-3" id="country" name="country" aria-label="Country">
+                        <option selected>Country</option>
+                        <option value="0">United States of America</option>
+                    </select>
                 </div>
             </div>          
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
+                <div class="col-md-3 d-flex justify-content-end">   
                     <label for="email">Email:</label>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-9">
                     <input type="email" class="form-control col-md-6" id="email" name="email" aria-describedby="emailHelp"/>
                     <small id="emailHelp" class="form-text text-muted">
                         Negotiator's email should be exactly the same as in the FAS ID of that user.
@@ -346,18 +360,18 @@
                 </div>
             </div>       
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
+                <div class="col-md-3 d-flex justify-content-end">   
                     <label for="phone">Phone:</label>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-9">
                     <input type="text" class="form-control col-md-4" id="phone" name="phone"/>
                 </div>
             </div>              
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
+                <div class="col-md-3 d-flex justify-content-end">   
                     <label for="fax" name="fax">Fax:</label>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-9">
                     <input type="text" class="form-control col-md-4" id="fax" name="fax"/>
                 </div>
             </div>
@@ -366,54 +380,58 @@
     </form>
 </ng-template>
 
-<ng-template #editOrderingReceipt>
-    <form id="negotiators">
+<ng-template #editOrderingReceiptEdi>
+    <form id="electronicDataInterchange">
 
         <div class="usa-alert usa-alert-warning mb-4">
             <div class="usa-alert-body">
                 <p>
-                    <b>Who will negotiate your eOffer?</b>
-                </p>
-                <p>
-                    Offerors can add multiple negotiators. A minimum of one negotiator must have signature authority, but it is STRONGLY
-                    recommended to have at least two valid Negotiators. Negotiators without signature authority may prepare the eOffer but
-                    only negotiators with signature authority may submit the eOffer and sign the Contract. 
+                    The offeror is requested to indicate the name, address and telephone number of the representative to be contacted regarding establishment of an EDI interface.
                 </p>
             </div>
         </div>
-        <div class="container">             
+        <div class="container">            
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
+                <div class="col-md-3 d-flex justify-content-end">   
                     <label for="name">Name:</label>
                 </div>
-                <div class="col-md-10">
-                    <input type="text" class="form-control col-md-8" id="name" name="name" aria-describedby="nameHelp"/>
-                    <small id="nameHelp" class="form-text text-muted">
-                        Negotiator's name should be exactly the same as in the FAS ID of that user.
-                    </small>
+                <div class="col-md-9">
+                    <input type="text" class="form-control col-md-6" id="name" name="name" aria-describedby="nameHelp"/>
                 </div>
             </div>
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
+                <div class="col-md-3 d-flex justify-content-end">   
                     <label for="title">Title:</label>
                 </div>
-                <div class="col-md-10">
-                    <input type="text" class="form-control col-md-8" id="title" name="title"/>
+                <div class="col-md-9">
+                    <input type="text" class="form-control col-md-6" id="title" name="title"/>
                 </div>
             </div>              
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
-                    <label for="role">Role:</label>
+                <div class="col-md-3 d-flex justify-content-end">   
+                    <label for="role">Address:</label>
                 </div>
-                <div class="col-md-10">
-                    <input type="text" class="form-control col-md-8" id="role" name="role"/>
+                <div class="col-md-9 form-inline">
+                    <input type="text" class="form-control col-md-8 mb-2" id="address1" name="role" placeholder="Street Address 1"/>
+                    <input type="text" class="form-control col-md-8 mb-2" id="address2" name="role" placeholder="Street Address 2"/>
+                    <input type="text" class="form-control col-md-5 mb-2 mr-3" id="city" name="role" placeholder="City"/>
+                    <select class="custom-select col-md-5 mb-2" id="state" name="state" aria-label="State or Province">
+                        <option selected>State or Province</option>
+                        <option value="0">Maryland</option>
+                        <option value="1">Virginia</option>
+                    </select>
+                    <input type="text" class="form-control col-md-3 mb-2 mr-3" id="zip" name="role" placeholder="Zip or Postal Code"/>
+                    <select class="custom-select col-md-5 mb-2 mr-3" id="country" name="country" aria-label="Country">
+                        <option selected>Country</option>
+                        <option value="0">United States of America</option>
+                    </select>
                 </div>
             </div>          
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
+                <div class="col-md-3 d-flex justify-content-end">   
                     <label for="email">Email:</label>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-9">
                     <input type="email" class="form-control col-md-6" id="email" name="email" aria-describedby="emailHelp"/>
                     <small id="emailHelp" class="form-text text-muted">
                         Negotiator's email should be exactly the same as in the FAS ID of that user.
@@ -421,18 +439,18 @@
                 </div>
             </div>       
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
+                <div class="col-md-3 d-flex justify-content-end">   
                     <label for="phone">Phone:</label>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-9">
                     <input type="text" class="form-control col-md-4" id="phone" name="phone"/>
                 </div>
             </div>              
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
+                <div class="col-md-3 d-flex justify-content-end">   
                     <label for="fax" name="fax">Fax:</label>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-9">
                     <input type="text" class="form-control col-md-4" id="fax" name="fax"/>
                 </div>
             </div>
@@ -441,6 +459,31 @@
     </form>
 </ng-template>
 
+<ng-template #editOrderingReceiptFax>
+    <form id="faxInformation">
+
+        <div class="usa-alert usa-alert-warning mb-4">
+            <div class="usa-alert-body">
+                <p>
+                    The offeror is requested to indicate the telephone number for the facsimile transimission equipment where orders should be forwarded.
+                </p>
+            </div>
+        </div>
+        <div class="container">         
+            <div class="row mb-3">
+                <div class="col-md-3 d-flex justify-content-end">   
+                    <label for="fax" name="fax">Fax:</label>
+                </div>
+                <div class="col-md-9">
+                    <input type="text" class="form-control col-md-4" id="fax" name="fax"/>
+                </div>
+            </div>
+        </div>
+    </form>
+</ng-template>
+
+
+<!-- Modal Templates -->
 <app-modal #remittanceAddressModal *ngIf="offerStatus == 'In Progress'"
 [config]="{ modalTitle: remittanceAddressSection.title, showDefaultOpenButton: false, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
     <ng-template #modalBody>
@@ -453,14 +496,26 @@
     </ng-template>
 </app-modal>
 
-<app-modal #orderingReceiptModal *ngIf="offerStatus == 'In Progress'"
-[config]="{ modalTitle: orderingReceiptSection.title, showDefaultOpenButton: false, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
+<app-modal #orderingReceiptEdiModal *ngIf="offerStatus == 'In Progress'"
+[config]="{ modalTitle: orderingReceiptSection.title + ' - Computer-to-Computer Electronic Data Interchange', showDefaultOpenButton: false, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
     <ng-template #modalBody>
-        <ng-container [ngTemplateOutlet]="editOrderingReceipt"></ng-container>
+        <ng-container [ngTemplateOutlet]="editOrderingReceiptEdi"></ng-container>
     </ng-template>
     <ng-template #modalFooter>
         <input type="button" value="Save" id="saveAndContinue" class="btn btn-success btn-lg"
-            (click)="saveOrderingReceiptForm()">
-        <input type="button" value="Cancel" id="cancel" class="btn btn-default btn-lg bg-danger-hover" (click)="closeOrderingReceiptModal()">
+            (click)="saveOrderingReceiptEdiForm()">
+        <input type="button" value="Cancel" id="cancel" class="btn btn-default btn-lg bg-danger-hover" (click)="closeOrderingReceiptEdiModal()">
+    </ng-template>
+</app-modal>
+
+<app-modal #orderingReceiptFaxModal *ngIf="offerStatus == 'In Progress'"
+[config]="{ modalTitle: orderingReceiptSection.title + ' - Fax', showDefaultOpenButton: false, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
+    <ng-template #modalBody>
+        <ng-container [ngTemplateOutlet]="editOrderingReceiptFax"></ng-container>
+    </ng-template>
+    <ng-template #modalFooter>
+        <input type="button" value="Save" id="saveAndContinue" class="btn btn-success btn-lg"
+            (click)="saveOrderingReceiptFaxForm()">
+        <input type="button" value="Cancel" id="cancel" class="btn btn-default btn-lg bg-danger-hover" (click)="closeOrderingReceiptFaxModal()">
     </ng-template>
 </app-modal>
