--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/point-of-contacts/point-of-contacts.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/point-of-contacts/point-of-contacts.component.html
@@ -113,48 +113,67 @@
         <div class="usa-alert usa-alert-warning mb-4">
             <div class="usa-alert-body">
                 <p>
-                    <b>Who will negotiate your eOffer?</b>
-                </p>
-                <p>
-                    Offerors can add multiple negotiators. A minimum of one negotiator must have signature authority, but it is STRONGLY
-                    recommended to have at least two valid Negotiators. Negotiators without signature authority may prepare the eOffer but
-                    only negotiators with signature authority may submit the eOffer and sign the Contract. 
+                    <b>Who is designated to be contacted for prompt Contract administration?</b>
                 </p>
             </div>
         </div>
-        <div class="container">             
+        <div class="container ">           
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
+                <div class="col-md-3 d-flex justify-content-end">   
+                    <label for="name">Point of Contact Type:</label>
+                </div>
+                <div class="col-md-9">
+                    <select class="custom-select col-md-5 mb-2" id="smallBusinessConcern" name="smallBusinessConcern" aria-label="State or Province">
+                        <option selected>Choose...</option>
+                        <option value="domesticcontact">Contact for Contract Administration (Domestic)</option>
+                        <option value="overseascontact">Contact for Contract Administration (Overseas)</option>
+                        <option value="ContactforMarketing">Contact for Marketing</option>
+                        <option value="IndustrialFundingFee">Industrial Funding Fee</option>
+                        <option value="orderpoc">Order POC</option>
+                    </select>
+                </div>
+            </div>             
+            <div class="row mb-3">
+                <div class="col-md-3 d-flex justify-content-end">   
                     <label for="name">Name:</label>
                 </div>
-                <div class="col-md-10">
-                    <input type="text" class="form-control col-md-8" id="name" name="name" aria-describedby="nameHelp"/>
-                    <small id="nameHelp" class="form-text text-muted">
-                        Negotiator's name should be exactly the same as in the FAS ID of that user.
-                    </small>
+                <div class="col-md-9">
+                    <input type="text" class="form-control col-md-6" id="name" name="name" aria-describedby="nameHelp"/>
                 </div>
             </div>
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
+                <div class="col-md-3 d-flex justify-content-end">   
                     <label for="title">Title:</label>
                 </div>
-                <div class="col-md-10">
-                    <input type="text" class="form-control col-md-8" id="title" name="title"/>
+                <div class="col-md-9">
+                    <input type="text" class="form-control col-md-6" id="title" name="title"/>
                 </div>
             </div>              
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
-                    <label for="role">Role:</label>
+                <div class="col-md-3 d-flex justify-content-end">   
+                    <label for="role">Address:</label>
                 </div>
-                <div class="col-md-10">
-                    <input type="text" class="form-control col-md-8" id="role" name="role"/>
+                <div class="col-md-9 form-inline">
+                    <input type="text" class="form-control col-md-8 mb-2" id="address1" name="role" placeholder="Street Address 1"/>
+                    <input type="text" class="form-control col-md-8 mb-2" id="address2" name="role" placeholder="Street Address 2"/>
+                    <input type="text" class="form-control col-md-5 mb-2 mr-3" id="city" name="role" placeholder="City"/>
+                    <select class="custom-select col-md-5 mb-2" id="state" name="state" aria-label="State or Province">
+                        <option selected>State or Province</option>
+                        <option value="0">Maryland</option>
+                        <option value="1">Virginia</option>
+                    </select>
+                    <input type="text" class="form-control col-md-3 mb-2 mr-3" id="zip" name="role" placeholder="Zip or Postal Code"/>
+                    <select class="custom-select col-md-5 mb-2 mr-3" id="country" name="country" aria-label="Country">
+                        <option selected>Country</option>
+                        <option value="0">United States of America</option>
+                    </select>
                 </div>
             </div>          
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
+                <div class="col-md-3 d-flex justify-content-end">   
                     <label for="email">Email:</label>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-9">
                     <input type="email" class="form-control col-md-6" id="email" name="email" aria-describedby="emailHelp"/>
                     <small id="emailHelp" class="form-text text-muted">
                         Negotiator's email should be exactly the same as in the FAS ID of that user.
@@ -162,18 +181,18 @@
                 </div>
             </div>       
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
+                <div class="col-md-3 d-flex justify-content-end">   
                     <label for="phone">Phone:</label>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-9">
                     <input type="text" class="form-control col-md-4" id="phone" name="phone"/>
                 </div>
             </div>              
             <div class="row mb-3">
-                <div class="col-md-2 d-flex justify-content-end">   
+                <div class="col-md-3 d-flex justify-content-end">   
                     <label for="fax" name="fax">Fax:</label>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-9">
                     <input type="text" class="form-control col-md-4" id="fax" name="fax"/>
                 </div>
             </div>
