--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/technical-proposal/corporate-experience/corporate-experience.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/technical-proposal/corporate-experience/corporate-experience.component.html
@@ -13,7 +13,7 @@
             <div class="flex-fill">
                 <h3 class="h5">{{ section.title }}</h3>
             </div>
-            <button type="button" class="btn btn-light gsa-light-blue bg-primary-hover mr-4 py-1" (click)="openModal()">
+            <button type="button" class="btn btn-light gsa-light-blue bg-primary-hover mr-4 py-1" (click)="openModal()" appStopClickPropagation>
                 <span class="fa fa-pencil mr-2"></span>
                 Edit
             </button>
@@ -138,12 +138,109 @@
 </ng-template>
 
 
+<!-- Edit Section -->
+<ng-template #editSection> 
+    
+    <div class="usa-alert usa-alert-warning mb-4">
+        <div class="usa-alert-body">
+            <p>
+                Briefly Address Each Element Below. (Note: Offerors are required to have a minimum of two years corporate experience in
+                order to meet the Corporate Experience requirements. Offers that do not demonstrate two years of corporate experience
+                will be rejected.)
+            </p>
+            <p>
+                The maximum permissible limit, across all the sections below is 10,000 characters (max 2 pages).
+            </p>
+        </div>
+    </div>
+    <div class="d-flex mb-3">
+        <dt class="mr-2">(A)</dt>
+        <dd class="flex-fill m-0">
+            <div class="form-group">
+                <label for="numberOfYearsExperience">
+                    The number of years of corporate experience in providing the products/services described under this Schedule, regardless
+                    of the specific products/services being proposed - a minimum of two (2) years of corporate experience is required.
+                </label>
+                <input type="number" class="form-control col-md-1" id="numberOfYearsExperience" name="numberOfYearsExperience"/>
+            </div>
+        </dd>
+    </div>
+    <div class="d-flex mb-3">
+        <dt class="mr-2">(B)</dt>
+        <dd class="flex-fill m-0">
+            <div class="form-group">
+                <label for="numberOfEmployees">
+                    Organization's number of employees, experience in the field, and resources available to enable it to fulfill
+                    requirements.
+                </label>
+                <textarea class="form-control" id="numberOfEmployees" name="numberOfEmployees" rows="3"></textarea>
+            </div>
+        </dd>
+    </div>
+    <div class="d-flex mb-3">
+        <dt class="mr-2">(C)</dt>
+        <dd class="flex-fill m-0">
+            <div class="form-group">
+                <label for="historyOfActivities">
+                    Brief history of the Offeror's activities contributing to the development of expertise and capabilities related to this
+                    requirement.
+                </label>
+                <textarea class="form-control" id="historyOfActivities" name="historyOfActivities" rows="3"></textarea>
+            </div>
+        </dd>
+    </div>
+    <div class="d-flex mb-3">
+        <dt class="mr-2">(D)</dt>
+        <dd class="flex-fill m-0">
+            <div class="form-group">
+                <label for="accountingControls">
+                    Information that demonstrates the Offeror's organizational and accounting controls. 
+                </label>
+                <textarea class="form-control" id="accountingControls" name="accountingControls" rows="3"></textarea>
+            </div>
+        </dd>
+    </div>
+    <div class="d-flex mb-3">
+        <dt class="mr-2">(E)</dt>
+        <dd class="flex-fill m-0">
+            <div class="form-group">
+                <label for="abilityToAcquireProducts">
+                    A description of the resources presently in-house or the ability to acquire the type and kinds of personnel/products proposed. 
+                </label>
+                <textarea class="form-control" id="abilityToAcquireProducts" name="abilityToAcquireProducts" rows="3"></textarea>
+            </div>
+        </dd>
+    </div>
+    <div class="d-flex mb-3">
+        <dt class="mr-2">(F)</dt>
+        <dd class="flex-fill m-0">
+            <div class="form-group">
+                <label for="marketingServices">
+                    A description of how the Offeror intends to market the proposed products/services to Federal clients. 
+                </label>
+                <textarea class="form-control" id="marketingServices" name="marketingServices" rows="3"></textarea>
+            </div>
+        </dd>
+    </div>
+    <div class="d-flex mb-3">
+        <dt class="mr-2">(G)</dt>
+        <dd class="flex-fill m-0">
+            <div class="form-group">
+                <label for="useOfSubcontractors">
+                    A discussion regarding the intended use of subcontractors. 
+                </label>
+                <textarea class="form-control" id="useOfSubcontractors" name="useOfSubcontractors" rows="3"></textarea>
+            </div>
+        </dd>
+    </div>
+    </ng-template>
+
 
 <!-- Modal Template -->
 <app-modal *ngIf="offerStatus == 'In Progress'"
 [config]="{ modalTitle: section.title, showDefaultOpenButton: false, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
     <ng-template #modalBody>
-        <ng-container [ngTemplateOutlet]="readonlySection"></ng-container>
+        <ng-container [ngTemplateOutlet]="editSection"></ng-container>
     </ng-template>
     <ng-template #modalFooter>
         <input type="button" value="Save" id="saveAndContinue" class="btn btn-success btn-lg"
